--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "lastguest/pixeler": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.1"
